<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/light_background"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="60dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/attendance"
            android:background="@color/white"
            android:contentDescription="@string/app_logo_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/primary_purple"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:text="@string/login_slogan"
            android:textSize="16sp"
            android:textColor="@color/secondary_text_color"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</LinearLayout>